--- a/app/views/libraries/bootstrap/head.scala.html
+++ b/app/views/libraries/bootstrap/head.scala.html
@@ -1,6 +1,5 @@
 @()
 
-<!-- <link rel='stylesheet'
-	href='@routes.Assets.versioned("lib/bootstrap/dist/css/bootstrap.min.css")'> -->
+<!-- npm -->
 <link rel='stylesheet'
-	href='@routes.Assets.versioned("lib/bootstrap-4.0.0-beta-dist/css/bootstrap.min.css")'>
+	href='@routes.Assets.versioned("lib/bootstrap/dist/css/bootstrap.min.css")'>
