Working for SecurityHeadersFilter 5

--- a/app/views/libraries/bootstrap/head.scala.html
+++ b/app/views/libraries/bootstrap/head.scala.html
@@ -19,9 +19,9 @@
 
 <link rel='stylesheet' href='@href()'>
 
-<div id="bootstrap_messages" class="d-none" data-messages='{
+<meta id="bootstrap_messages" class="d-none" data-messages='{
 	"@MessageKeys.REQUIRED":"@Messages(MessageKeys.REQUIRED)",
 	"@MessageKeys.SELECT__FILE":"@Messages(MessageKeys.SELECT__FILE)",
 	"@MessageKeys.BROWSE":"@Messages(MessageKeys.BROWSE)"
-}'></div>
+}'></meta>
 <script src='@routes.Assets.versioned("lib/custom/bootstrap/head.css.js")'></script>
