--- a/app/views/system/pages/error.scala.html
+++ b/app/views/system/pages/error.scala.html
@@ -90,6 +90,6 @@
 		}'></div>
 
 		@libraries.standard.last()
-		<script src='@routes.Assets.versioned("javascripts/error/error.js")'></script>
+		<script src='@routes.Assets.versioned("javascripts/system/pages/error.js")'></script>
 	}
 }
