Working for SecurityHeadersFilter 6

--- a/app/views/libraries/bootstrap/last.scala.html
+++ b/app/views/libraries/bootstrap/last.scala.html
@@ -10,7 +10,7 @@
 	}else{
 		routes.Assets.versioned("lib/bootstrap-4-dev/dist/js/bootstrap.min.js")
 		// npm
-		routes.Assets.versioned("lib/bootstrap/dist/js/bootstrap.min.js")
+		//routes.Assets.versioned("lib/bootstrap/dist/js/bootstrap.min.js")
 	}
 }
 
