--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -55,7 +55,9 @@
 						<h5 class="form-signin-heading">@Messages(MessageKeys.USER_PLEASE__SIGNIN)</h5>
 						<div id="selectUserContainer d-none">
 							<div class="row justify-content-center">
-								<div class="my-3"><i id="selectUser" class="fa fa-inverse fa-square fa-2x fa-user-o rounded-circle bg-success shadow" aria-hidden="true"></i></div>
+								<div class="my-3">
+									@components.button(Map("id"->"selectFixedUser", "type"->"success", "icon"->"fa fa-user-o", "class"->"fixedUserButton rounded-circle", "data-toggle"->"modal", "data-target"->"#usersDialog"))
+								</div>
 							</div>
 						</div>
 						@if(form.hasGlobalErrors) {
@@ -102,6 +104,17 @@
 			<div class="col-sm-1 col-md-2 col-lg-3 col-xl-3">
 			</div>
 		</div>
+		}
+
+		@components.modal(Map("id"->"usersDialog", "title"->Messages(MessageKeys.USER), "closable"->"true", "size"->"lg"), List(
+				Map("id"->"usersOk", "type"->"primary", "text"->Messages(MessageKeys.OK), "data-dismiss"->"modal", "default"->"true")
+			)){
+
+			@components.container(Map("id"->"", "fluid"->"true")){
+
+				<div id="fixedUsers" class="row">
+				</div>
+			}
 		}
 
 		@components.modal(Map("id"->"licenseDialog", "title"->Messages(MessageKeys.LIBRARY), "closable"->"true", "size"->"lg"), List(
