--- a/public/lib/custom/materialicons/head.css
+++ b/public/lib/custom/materialicons/head.css
@@ -1,13 +1,39 @@
 @charset "utf-8";
 
+@font-face {
+	font-family: 'Material Icons';
+	font-style: normal;
+	font-weight: 400;
+	src: url(MaterialIcons-Regular.eot); /* For IE6-8 */
+	src: local('Material Icons'),
+		local('MaterialIcons-Regular'),
+		url(MaterialIcons-Regular.woff2) format('woff2'),
+		url(MaterialIcons-Regular.woff) format('woff'),
+		url(MaterialIcons-Regular.ttf) format('truetype');
+}
+
 .mi {
+	font-family: 'Material Icons';
+	font-weight: normal;
+	font-style: normal;
+	font-size: 24px;	/* Preferred icon size */
 	display: inline-block;
-	font: normal normal normal 14px / 1 'Material Icons';
-	font-size: 1.3em;
-	text-rendering: auto;
+	line-height: 1;
+	text-transform: none;
+	letter-spacing: normal;
+	word-wrap: normal;
+	white-space: nowrap;
+	direction: ltr;
 	vertical-align: -0.18em;
+
+	/* Support for all WebKit browsers. */
 	-webkit-font-smoothing: antialiased;
+	/* Support for Safari and Chrome. */
 	text-rendering: optimizeLegibility;
+
+	/* Support for Firefox. */
 	-moz-osx-font-smoothing: grayscale;
+
+	/* Support for IE. */
 	font-feature-settings: 'liga';
 }
