--- a/public/stylesheets/user/index.css
+++ b/public/stylesheets/user/index.css
@@ -72,12 +72,44 @@ body {
 }
 
 @keyframes seal {
-  0%   { transform: rotate(18deg); opacity:0.0;}
-  100%  { transform: rotate(20deg); opacity:1.0;}
+	0% {
+		transform: rotate(18deg);
+		opacity:0.0;
+	}
+	100% {
+		transform: rotate(20deg);
+		opacity:1.0;
+	}
 }
 
-#selectUser{
-	padding: 10px 12px;
+#usersDialog>.modal-dialog>.modal-content>.modal-body{
+	background-color: rgba(29, 50, 86, 0.78);
+}
+.fixedUser>.fixedUser_info{
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	font-size: 1rem;
+}
+.fixedUser{
+	width: 120px;
+	text-align: center;
+	float: left;
+	padding: 4px 4px;
+}
+.fixedUser>.fixedUser_caption{
+	font-size: 1rem;
+	word-wrap: break-word;
+	color: white;
+}
+
+.fixedUserButton{
+	padding: 8px 12px;
+	width: 52px;
+	height: 52px;
+}
+
+.fixedUserButton>i{
+	font-size: 2em;
 }
 
 #storeAccount{
