--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -142,10 +142,10 @@
 							Map("name"->"jQuery UI", "icon"->"fa fa-pencil", "link"->"http://jqueryui.com", "info"->""),
 							Map("name"->"jQuery UI Touch Punch", "icon"->"fa fa-pencil", "link"->"http://touchpunch.furf.com", "info"->""),
 							Map("name"->"Super CSV", "icon"->"fa fa-pencil", "link"->"http://super-csv.github.io/super-csv", "info"->""),
-							Map("name"->"POI", "icon"->"fa fa-table", "link"->"https://poi.apache.org", "info"->""),
+							Map("name"->"POI", "icon"->"fa fa-file-text-o", "link"->"https://poi.apache.org", "info"->""),
 							Map("name"->"ZXing", "icon"->"fa fa-barcode", "link"->"https://zxing.appspot.com", "info"->""),
 							Map("name"->"PDFBox", "icon"->"fa fa-file-pdf-o", "link"->"http://pdfbox.apache.org", "info"->""),
-							Map("name"->"JasperReports® Library", "icon"->"fa file-text-o", "link"->"https://community.jaspersoft.com/project/jasperreports-library", "info"->""),
+							Map("name"->"JasperReports® Library", "icon"->"fa fa-file-text-o", "link"->"https://community.jaspersoft.com/project/jasperreports-library", "info"->""),
 							Map("name"->"Barbecue", "icon"->"fa fa-barcode", "link"->"http://barbecue.sourceforge.net", "info"->""),
 							Map("name"->"Barcode4J", "icon"->"fa fa-barcode", "link"->"http://barcode4j.sourceforge.net", "info"->""),
 							Map("name"->"Batik", "icon"->"fa fa-pencil", "link"->"https://xmlgraphics.apache.org/batik/", "info"->""),
@@ -182,6 +182,7 @@
 							Map("name"->"Snap.svg", "icon"->"fa fa-pencil", "link"->"http://snapsvg.io/", "info"->""),
 							Map("name"->"Frappé Gantt", "icon"->"fa fa-pencil", "link"->"https://frappe.github.io/gantt/", "info"->""),
 							Map("name"->"PDF.js", "icon"->"fa fa-file-pdf-o", "link"->"https://github.com/mozilla/pdf.js", "info"->""),
+							Map("name"->"LibreOffice", "icon"->"fa fa-file-text-o", "link"->"https://www.libreoffice.org", "info"->""),
 							Map("name"->"wkhtmltopdf", "icon"->"fa fa-file-pdf-o", "link"->"https://wkhtmltopdf.org", "info"->""),
 							Map("name"->"3Dmol.js", "icon"->"fa fa-pencil", "link"->"http://3dmol.csb.pitt.edu", "info"->""),
 							Map("name"->"moment", "icon"->"fa fa-clock-o", "link"->"http://momentjs.com", "info"->""),
