--- a/app/views/bootstrap/layout/grid.scala.html
+++ b/app/views/bootstrap/layout/grid.scala.html
@@ -146,6 +146,45 @@
 					</div>
 				</div>
 
+				<div class="form-group row">
+					<div class="d-none d-md-block col-md-3 col-xl-4">
+					</div>
+					<div class="col-6 col-md-3 col-xl-2">
+						@components.button(Map("id"->"", "block"->"true", "icon"->"", "text"->"Button"))
+					</div>
+					<div class="col-6 col-md-3 col-xl-2">
+						@components.button(Map("id"->"", "block"->"true", "icon"->"", "text"->"Button"))
+					</div>
+					<div class="d-none d-md-block col-md-3 col-xl-4">
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<div class="col-6 col-md-3 col-xl-2">
+						@components.button(Map("id"->"", "type"->"secondary", "block"->"true", "icon"->"", "text"->"Button"))
+					</div>
+					<div class="d-none d-md-block col-md-3 col-xl-4">
+					</div>
+					<div class="d-none d-md-block col-md-3 col-xl-4">
+					</div>
+					<div class="col-6 col-md-3 col-xl-2">
+						@components.button(Map("id"->"", "type"->"secondary", "block"->"true", "icon"->"", "text"->"Button"))
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<div class="col-12 col-sm-6 col-md-3 col-xl-2">
+						@components.button(Map("id"->"", "type"->"success", "block"->"true", "icon"->"", "text"->"Button", "class"->"mb-3 mb-sm-0 "))
+					</div>
+					<div class="d-none d-md-block col-md-3 col-xl-4">
+					</div>
+					<div class="d-none d-md-block col-md-3 col-xl-4">
+					</div>
+					<div class="col-12 col-sm-6 col-md-3 col-xl-2">
+						@components.button(Map("id"->"", "type"->"success", "block"->"true", "icon"->"", "text"->"Button"))
+					</div>
+				</div>
+
 			</form>
 		}
 
