--- a/app/views/lab/application/tasks.scala.html
+++ b/app/views/lab/application/tasks.scala.html
@@ -17,6 +17,7 @@
 	<a href="@controllers.lab.application.routes.Application.index("partprint").toString()" class="list-group-item @("active".when(equalTask("partprint")))">@(Messages(MessageKeys.PART)+" "+Messages(MessageKeys.PRINT))</a>
 	<a href="@controllers.lab.application.routes.Application.index("ivd").toString()" class="list-group-item @("active".when(equalTask("ivd")))">IVD</a>
 
+	<a href="@controllers.lab.application.routes.Application.index("jar").toString()" class="list-group-item @("active".when(equalTask("jar"))) secret">JAR</a>
 	<a href="@controllers.lab.application.routes.Application.index("jpql").toString()" class="list-group-item @("active".when(equalTask("jpql"))) secret">JPQL</a>
 	<a href="@controllers.lab.application.routes.WebSocket.index().toString()" class="list-group-item @("active".when(equalTask("websocket"))) secret">WebSocket</a>
 	<a href="@controllers.lab.application.routes.Application.index("comet").toString()" class="list-group-item @("active".when(equalTask("comet"))) secret">Comet</a>
