--- a/app/views/lab/ilike/index.scala.html
+++ b/app/views/lab/ilike/index.scala.html
@@ -13,13 +13,13 @@
 
 @frame(){
 
-	@head("Bootstrap"){
+	@head("Lab"){
 
 		@libraries.standard.head()
-		<link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/bootstrap/ilike/index.css")'>
+		<link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/lab/ilike/index.css")'>
 	}
 
-	@body("bootstrap","ilike"){
+	@body("lab","ilike"){
 
 		@components.container(Map("id"->"", "fluid"->"true")){
 
