--- a/app/views/lab/fork/index.scala.html
+++ b/app/views/lab/fork/index.scala.html
@@ -1,8 +1,6 @@
-@import scala.collection.immutable._
-@import scala.collection.immutable.Map
-@import scala.collection.immutable.Seq
-@import scala.collection.immutable.List
 @import scala.collection.JavaConversions._
+@import scala.collection.JavaConverters._
+
 @import views.html._
 @import views.html.components
 
@@ -10,33 +8,37 @@
 
 @()
 
+@import scala.collection.immutable._
+@import scala.collection.immutable.Map
+@import scala.collection.immutable.Seq
+@import scala.collection.immutable.List
+
 @frame(){
 
-	@head("lab"){
+	@head("Lab"){
 
 		@libraries.standard.head()
+		<link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/lab/fork/index.css")'>
 	}
 
-	@body("lab","ui"){
+	@body("lab","fork"){
 
-		@components.container(Map("id"->"", "fluid"->"true", "class"->"mt-3")){
-			@breadcrumb(Map("id"->"", "name"->Messages(MessageKeys.ARROW), "icon"->"fa fa-arrow-right", "selected"->"true"))
+		@components.container(Map("id"->"", "fluid"->"true", "class"->"mt-3 d-md-none")){
+
+			<div id="select-content" class="row">
+				<div class="col-6">
+						@components.button(Map("id"->"", "block"->"true", "icon"->"", "text"->Messages(MessageKeys.LEFT)))
+				</div>
+				<div class="col-6">
+						@components.button(Map("id"->"", "outline"->"true", "block"->"true", "icon"->"", "text"->Messages(MessageKeys.RIGHT)))
+				</div>
+			</div>
 		}
 
-		@components.container(Map("id"->"", "fluid"->"true")){
-			<div class="row">
-				<div class="col-md-3">
+		@components.container(Map("id"->"", "fluid"->"true", "class"->"mt-3")){
 
-					@tasks(Map("id"->"", "task"->"arrow"))
-				</div>
-				<div class="mt-3 d-md-none">
-				</div>
-
-				<div class="col-md-9">
-
-					<div class="row">
-
-						<div class="col-md-5">
+			<div id="double-content" class="row current-left">
+				<div id="left-content" class="col-12 col-md-6">
 							<h4 class="headline">@(Messages(MessageKeys.LEFT) + ' ' + Messages(MessageKeys.CONTENT))</h4>
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
@@ -45,14 +47,8 @@
 									@components.image(Map("id"->"", "source"->"holder.js/100px200?random=yes", "fluid"->"true", "alternate"->(Messages(MessageKeys.LEFT) + ' ' + Messages(MessageKeys.CONTENT))))
 								</div>
 							</div>
-						</div>
-						<div class="col-md-2 align-self-center">
-							<div class="row justify-content-center">
-								<div class="mb-3 d-md-none">@components.icon(Map("id"->"", "icon"->"fa fa-arrow-down fa-3x", "class"->"text-primary", "aria-hidden"->"true"))</div>
-								<div class="mt-3 d-none d-md-block">@components.icon(Map("id"->"", "icon"->"fa fa-arrow-right fa-3x", "class"->"text-primary", "aria-hidden"->"true"))</div>
-							</div>
-						</div>
-						<div class="col-md-5">
+				</div>
+				<div id="right-content" class="col-12 col-md-6">
 							<h4 class="headline">@(Messages(MessageKeys.RIGHT) + ' ' + Messages(MessageKeys.CONTENT))</h4>
 							<div class="jumbotron jumbotron-fluid">
 								<div class="container">
@@ -61,13 +57,12 @@
 									@components.image(Map("id"->"", "source"->"holder.js/100px300?random=yes", "fluid"->"true", "alternate"->(Messages(MessageKeys.RIGHT) + ' ' + Messages(MessageKeys.CONTENT))))
 								</div>
 							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		}
 
 		@libraries.standard.last()
 		@libraries.holder.last()
+		<script src='@routes.Assets.versioned("javascripts/lab/fork/index.js")'></script>
 	}
 }
