Follow Play Framework v2.6.11

--- a/app/views/development/design/theme.scala.html
+++ b/app/views/development/design/theme.scala.html
@@ -36,6 +36,11 @@
 
 				<div class="col-12 mt-3">
 
+					@components.image(Map("id"->"theme_image", "class"->"w-144p h-144p", "source"->routes.Assets.versioned("themes/" + session.get(models.user.User.THEME).toLowerCase + "/image.png").toString))
+				</div>
+
+				<div class="col-12 mt-3">
+
 					<h1 class="headline">Head line</h1>
 					<h2 class="headline">Head line</h2>
 					<h3 class="headline">Head line</h3>
