--- a/app/views/fontawesome/style/largericon.scala.html
+++ b/app/views/fontawesome/style/largericon.scala.html
@@ -17,6 +17,7 @@
 	@head(Messages(MessageKeys.FONTAWESOME)){
 
 		@libraries.standard.head()
+		<link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/fontawesome/style/largericon.css")'>
 	}
 
 	@body("fontawesome","style"){
@@ -38,11 +39,11 @@
 					<div class="row mt-3">
 
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-apple fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-apple fa-4x", "class"->"text-muted"))
 							<p>Apple</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-windows fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-windows fa-4x", "class"->"text-primary"))
 							<p>Windows</p>
 						</div>
 						<div class="text-center float-left w-144p">
@@ -50,7 +51,7 @@
 							<p>Linux</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-android fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-android fa-4x", "class"->"text-success"))
 							<p>Android</p>
 						</div>
 					</div>
@@ -58,19 +59,19 @@
 					<div class="row mt-3">
 
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fas fa-mobile-alt fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-mobile-alt fa-4x", "class"->"text-info"))
 							<p>Phone</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fas fa-tablet-alt fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-tablet-alt fa-4x", "class"->"text-info"))
 							<p>Tablet</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fas fa-desktop fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-desktop fa-4x", "class"->"text-info"))
 							<p>Desktop</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fas fa-server fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-server fa-4x", "class"->"text-info"))
 							<p>Server</p>
 						</div>
 					</div>
@@ -78,28 +79,50 @@
 					<div class="row mt-3">
 
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-safari fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-safari fa-4x", "class"->"text-primary"))
 							<p>Safari</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-chrome fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-chrome fa-4x", "class"->"text-success"))
 							<p>Chrome</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-firefox fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-firefox fa-4x", "class"->"text-warning"))
 							<p>Firefox</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-opera fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-opera fa-4x", "class"->"text-danger"))
 							<p>Opera</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-internet-explorer fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-internet-explorer fa-4x", "class"->"text-primary"))
 							<p>Internet Explorer</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-edge fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-edge fa-4x", "class"->"text-primary"))
 							<p>Edge</p>
+						</div>
+					</div>
+
+					<div class="row mt-3 secret">
+
+						<div class="text-center float-left w-144p">
+							<div class="notification-box bg-success rounded py-2">
+								@components.icon(Map("id"->"", "class"->"notification-box-target text-white", "icon"->"fas fa-phone fa-3x"))
+								@components.badge(Map("id"->"", "class"->"notification-box-count", "type"->"danger", "pill"->"true", "text"->"16"))
+							</div>
+						</div>
+						<div class="text-center float-left w-144p">
+							<div class="notification-box bg-primary rounded py-2">
+								@components.icon(Map("id"->"", "class"->"notification-box-target text-white", "icon"->"fas fa-envelope fa-3x"))
+								@components.badge(Map("id"->"", "class"->"notification-box-count", "type"->"danger", "pill"->"true", "text"->"65536"))
+							</div>
+						</div>
+						<div class="text-center float-left w-144p">
+							<div class="notification-box bg-success rounded py-2">
+								@components.icon(Map("id"->"", "class"->"notification-box-target text-white", "icon"->"fas fa-comment fa-3x"))
+								@components.badge(Map("id"->"", "class"->"notification-box-count", "type"->"danger", "pill"->"true", "text"->"256"))
+							</div>
 						</div>
 					</div>
 				</div>
