--- a/app/views/fontawesome/style/squareicon.scala.html
+++ b/app/views/fontawesome/style/squareicon.scala.html
@@ -38,16 +38,16 @@
 					<div class="row mt-3 mb-3">
 
 						<div class="ml-3 float-left">
-							@components.icon(Map("id"->"", "icon"->"fas fa-file-word fa-fw fa-inverse fa-2x", "class"->"pa-1 bg-primary p-2 rounded"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-file-word fa-inverse fa-2x", "class"->"bg-primary p-2 rounded"))
 						</div>
 						<div class="ml-3 float-left">
-							@components.icon(Map("id"->"", "icon"->"fas fa-file-excel fa-fw fa-inverse fa-2x", "class"->"pa-1 bg-success p-2 rounded"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-file-excel fa-inverse fa-2x", "class"->"bg-success p-2 rounded"))
 						</div>
 						<div class="ml-3 float-left">
-							@components.icon(Map("id"->"", "icon"->"fas fa-file-powerpoint fa-fw fa-inverse fa-2x", "class"->"pa-1 bg-warning p-2 rounded"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-file-powerpoint fa-inverse fa-2x", "class"->"bg-warning p-2 rounded"))
 						</div>
 						<div class="ml-3 float-left">
-							@components.icon(Map("id"->"", "icon"->"fas fa-file-pdf fa-fw fa-inverse fa-2x", "class"->"pa-1 bg-danger p-2 rounded"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-file-pdf fa-inverse fa-2x", "class"->"bg-danger p-2 rounded"))
 						</div>
 					</div>
 				</div>
