--- a/app/views/libraries/chartjs/last.scala.html
+++ b/app/views/libraries/chartjs/last.scala.html
@@ -1,3 +1,6 @@
 @()
 
-<script src='@routes.Assets.versioned("lib/chart.js/dist/Chart.bundle.min.js")'></script>
+<link rel='stylesheet' href='@routes.Assets.versioned("lib/custom/chart.js/head.css")'>
+
+<script src='@routes.Assets.versioned("lib/custom/chart.js/dist/Chart.bundle.js")'></script>
+<!-- <script src='@routes.Assets.versioned("lib/chart.js/dist/Chart.bundle.min.js")'></script> -->
