--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -41,7 +41,11 @@ body {
 	transition-timing-function: linear;
 }
 
-#system_user-menu + .dropdown-menu {
+#system_menu>.navbar-brand>img {
+	transform: scale3d(1.3, 1.3, 1.3);
+}
+
+#system_user-menu+.dropdown-menu {
 	left: initial;
 	right: 0px;
 	z-index:1031;
