Follow Font Awesome v5.0.6

--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -163,6 +163,7 @@
 							Map("name"->"JBoss Marshalling", "icon"->"fas fa-pencil-alt", "link"->"http://www.jboss.org/jbossmarshalling", "info"->""),
 							Map("name"->"JBeret", "icon"->"fas fa-tasks", "link"->"https://github.com/jberet/jsr352", "info"->""),
 							Map("name"->"WildFly Security Manager", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/wildfly-security/security-manager", "info"->""),
+							Map("name"->"Logback JSON encoder", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/logstash/logstash-logback-encoder", "info"->""),
 							Map("name"->"SchemaSpy", "icon"->"fas fa-database", "link"->"http://schemaspy.org", "info"->""),
 							Map("name"->"Bootbox.js", "icon"->"fas fa-pencil-alt", "link"->"http://bootboxjs.com", "info"->""),
 							Map("name"->"pickadate", "icon"->"fas fa-calendar-alt", "link"->"http://amsul.ca/pickadate.js", "info"->""),
@@ -185,6 +186,7 @@
 							Map("name"->"jqTree", "icon"->"fas fa-sitemap", "link"->"http://mbraak.github.io/jqTree/#node-functions", "info"->""),
 							Map("name"->"Snap.svg", "icon"->"fas fa-pencil-alt", "link"->"http://snapsvg.io/", "info"->""),
 							Map("name"->"Frappé Gantt", "icon"->"fas fa-pencil-alt", "link"->"https://frappe.github.io/gantt/", "info"->""),
+							Map("name"->"Viz.js", "icon"->"fas fa-share-alt", "link"->"https://github.com/mdaines/viz.js", "info"->""),
 							Map("name"->"PDF.js", "icon"->"far fa-file-pdf", "link"->"https://github.com/mozilla/pdf.js", "info"->""),
 							Map("name"->"LibreOffice", "icon"->"far fa-file-alt", "link"->"https://www.libreoffice.org", "info"->""),
 							Map("name"->"wkhtmltopdf", "icon"->"far fa-file-pdf", "link"->"https://wkhtmltopdf.org", "info"->""),
