--- a/app/views/development/design/icon.scala.html
+++ b/app/views/development/design/icon.scala.html
@@ -48,7 +48,6 @@
 
 			<div id="fa" class="mb-3">
 				<h4 class="headline">@Messages(MessageKeys.FONTAWESOME)</h4>
-				@components.alert(Map("id"->"", "icon"->"fas fa-info-circle", "text"->"No display is another prefix.", "type"->"info"))
 				<div class="row mt-3 icon_result_list">
 
 				</div>
@@ -59,8 +58,6 @@
 						@components.icon(Map("id"->"", "icon"->("fas fa-" + fontAwesomeIconName + " fa-2x"), "class"->"icon_body"))
 						<div class="icon_caption">@fontAwesomeIconName</div>
 					</div>
-					}
-					@for(fontAwesomeIconName <- fontAwesomeIconNames) {
 					<div class="icon_container mb-3 wordwrap">
 						@components.icon(Map("id"->"", "icon"->("far fa-" + fontAwesomeIconName + " fa-2x"), "class"->"icon_body"))
 						<div class="icon_caption">@fontAwesomeIconName</div>
@@ -109,7 +106,7 @@
 
 			<div id="emojione" class="mb-3">
 				<h4 class="headline">EmojiOne</h4>
-				@components.alert(Map("id"->"", "icon"->"fas fa-info-circle", "text"->"Emoji icons provided free by <a href='https://www.emojione.com'>EmojiOne</a>", "type"->"info"))
+				<small class="text-muted">Emoji icons provided free by <a href='https://www.emojione.com'>EmojiOne</a></small>
 				<div class="row mt-3 icon_result_list">
 
 				</div>
