--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -147,6 +147,7 @@
 							Map("name"->"jQuery UI Touch Punch", "icon"->"fas fa-pencil-alt", "link"->"http://touchpunch.furf.com", "info"->""),
 							Map("name"->"Super CSV", "icon"->"fas fa-pencil-alt", "link"->"http://super-csv.github.io/super-csv", "info"->""),
 							Map("name"->"POI", "icon"->"far fa-file-alt", "link"->"https://poi.apache.org", "info"->""),
+							Map("name"->"Tika", "icon"->"far fa-file-alt", "link"->"http://tika.apache.org", "info"->""),
 							Map("name"->"ZXing", "icon"->"fas fa-barcode", "link"->"https://zxing.appspot.com", "info"->""),
 							Map("name"->"PDFBox", "icon"->"far fa-file-pdf", "link"->"http://pdfbox.apache.org", "info"->""),
 							Map("name"->"JasperReports® Library", "icon"->"far fa-file-alt", "link"->"https://community.jaspersoft.com/project/jasperreports-library", "info"->""),
