--- a/app/views/fontawesome/style/largericon.scala.html
+++ b/app/views/fontawesome/style/largericon.scala.html
@@ -39,19 +39,19 @@
 					<div class="row mt-3">
 
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-apple fa-4x", "class"->"text-muted"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-apple fa-4x", "class"->"text-grey"))
 							<p>Apple</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-windows fa-4x", "class"->"text-primary"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-windows fa-4x", "class"->"text-blue"))
 							<p>Windows</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-linux fa-4x"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-linux fa-4x", "class"->"text-black"))
 							<p>Linux</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-android fa-4x", "class"->"text-success"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-android fa-4x", "class"->"text-light-green"))
 							<p>Android</p>
 						</div>
 					</div>
@@ -59,19 +59,19 @@
 					<div class="row mt-3">
 
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fas fa-mobile-alt fa-4x", "class"->"text-info"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-mobile-alt fa-4x", "class"->"text-grey"))
 							<p>Phone</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fas fa-tablet-alt fa-4x", "class"->"text-info"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-tablet-alt fa-4x", "class"->"text-grey"))
 							<p>Tablet</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fas fa-desktop fa-4x", "class"->"text-info"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-desktop fa-4x", "class"->"text-black"))
 							<p>Desktop</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fas fa-server fa-4x", "class"->"text-info"))
+							@components.icon(Map("id"->"", "icon"->"fas fa-server fa-4x", "class"->"text-blue-gray"))
 							<p>Server</p>
 						</div>
 					</div>
@@ -79,27 +79,27 @@
 					<div class="row mt-3">
 
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-safari fa-4x", "class"->"text-primary"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-safari fa-4x", "class"->"text-light-blue"))
 							<p>Safari</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-chrome fa-4x", "class"->"text-success"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-chrome fa-4x", "class"->"text-green"))
 							<p>Chrome</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-firefox fa-4x", "class"->"text-warning"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-firefox fa-4x", "class"->"text-orange"))
 							<p>Firefox</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-opera fa-4x", "class"->"text-danger"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-opera fa-4x", "class"->"text-red"))
 							<p>Opera</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-internet-explorer fa-4x", "class"->"text-primary"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-internet-explorer fa-4x", "class"->"text-light-blue"))
 							<p>Internet Explorer</p>
 						</div>
 						<div class="text-center float-left w-144p">
-							@components.icon(Map("id"->"", "icon"->"fab fa-edge fa-4x", "class"->"text-primary"))
+							@components.icon(Map("id"->"", "icon"->"fab fa-edge fa-4x", "class"->"text-blue"))
 							<p>Edge</p>
 						</div>
 					</div>
