--- a/app/views/debug.scala.html
+++ b/app/views/debug.scala.html
@@ -17,5 +17,6 @@
 	<div><strong>Java</strong>&nbsp;<span id="Java_ver"></span></div>
 	<div><strong>Play</strong>&nbsp;<span id="Play_ver"></span></div>
 	<div><strong>jQuery</strong>&nbsp;<span id="jQuery_ver"></span></div>
+	<div><strong>Bootstrap</strong>&nbsp;<span id="Bootstrap_ver"></span></div>
 
 """), "data-placement"->"bottom", "class"->"d-none", "data-memory"->(((Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory())/1000000) + "/" + (Runtime.getRuntime().totalMemory())/1000000), "data-javaver"->System.getProperty("java.version"), "data-playver"->play.core.PlayVersion.current))
