--- a/public/stylesheets/lab/page/fork.css
+++ b/public/stylesheets/lab/page/fork.css
@@ -1,6 +1,16 @@
 @charset "utf-8";
 
-#floatbutton{
+@media (max-width:767px) {
+
+	.current-left>#right-content {
+		display: none;
+	}
+	.current-right>#left-content {
+		display: none;
+	}
+}
+
+#tasksbutton {
 	padding-top: 0rem;
 	font-size: 24px;
 	line-height: 50px;
