--- a/public/stylesheets/lab/page/ilike.css
+++ b/public/stylesheets/lab/page/ilike.css
@@ -17,3 +17,15 @@
 		border-left: 0.5px solid darkgray;
 	}
 }
+
+#tasksbutton {
+	padding-top: 0rem;
+	font-size: 24px;
+	line-height: 50px;
+	width: 55px;
+	height: 55px;
+	position: fixed;
+	bottom: 25px;
+	right: 25px;
+	z-index: 3000;
+}
